2003-03-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (record_arrow_key_start): 
	Use bottom middle point as start position, since otherwise you might miss
	icons that are not as tall as half the height of the current one.
	
2003-03-17  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-file-management-properties.c
	(nautilus_file_management_properties_dialog_setup):
	Correctly handle cases where one widget controls several keys
	by using new _slave stuff in eel.

	* libnautilus-private/apps_nautilus_preferences.schemas:
	Correct paths for show_backup_files & show_hidden_files
	
2003-03-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (lay_down_icons_tblr):
	Fix clean up by name layout.
	
2003-03-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_start_renaming_selected_item):
	Move rename widget left one pixel to handle frame width.

	* libnautilus-private/nautilus-icon-canvas-item.c (compute_text_rectangle):
	Make the LABEL_OFFSET be part of the text rect to avoid a gap.

2003-03-14  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
	Don't start a rename if there is already a rename in progress.

	Patch from marten ter borgh <marten@terborgh.demon.nl>, fixes
	bug #106464.

2003-03-14  Dave Camp  <dave@ximian.com>

	* components/adapter/nautilus-adapter-stream-load-strategy.c 
	(nautilus_adapter_stream_load_strategy_load_location): Recompute
	the mime type and passit to the stream's load method.

2003-03-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-dnd.c (drag_leave_callback): 
	Clear the drop target.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-global-preferences.c:
	Fix some default values.
	
	* libnautilus-private/apps_nautilus_preferences.schemas:
	Update the schema file.
	