@@ -1,3 +1,10 @@
+2003-03-18  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(set_up_scripts_directory_global), (create_scripts_directory),
+	(open_scripts_folder_callback):
+	Fix script migration from Nautilus 1.0.x (bug #80704)
+
 2003-03-17  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.c (record_arrow_key_start): 
